--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,85 +1,112 @@
 .filters {
-  background-color: white;
-  height: 70px;
-  width: 100%;
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+    background-color: white;
+    height          : 70px;
+    width           : 100%;
+    border          : 1px solid #ddd;
+    border-radius   : 4px;
+    display         : flex;
+    justify-content : left;
+    align-items     : center;
 }
 
-.filters button {
-  font-size: 18px;
-  background-color: #ff5a5f;
-  color: #ffffff;
-  height: 48px;
-  width: 20%;
-  border: none;
-  border-radius: 4px;
-  margin-left: auto;
-  margin-right: 30px;
+.filters>button {
+    background-color: #FF5A5F;
+    color           : #FFFFFF;
+    font-size       : 18px;
+    height          : 48px;
+    width           : 20%;
+    border          : 0;
+    border-radius   : 4px;
+    margin-left     : auto;
+    margin-right    : 30px;
 }
 
-.filters button:hover {
-  opacity: 0.9;
-}
-
-.filters .locations {
-  border-right: #dddddd solid 1px;
+.filters>button:hover {
+    opacity: 0.9;
 }
 
 .filters .locations,
 .filters .amenities {
-  height: 100%;
-  width: 25%;
-  position: relative;
-  z-index: 1;
+    height      : 100%;
+    width       : 25%;
+    padding-left: 3em;
 }
 
-.filters .locations h3,
-.filters .amenities h3 {
-  font-weight: 600;
-  margin: 0;
-  padding: 17px 30px 0 30px;
+
+.filters h4 {
+    font-weight: 400;
+    font-size  : 14px;
+    margin     : 0;
 }
 
-.filters .locations h4,
-.filters .amenities h4 {
-  font-weight: 400;
-  font-size: 14px;
-  margin-top: 0;
-  padding-left: 30px;
+.filters h3 {
+    font-weight: 600;
+    margin     : .5em 0 0.1em 0;
 }
 
-.popover h2 {
-  font-size: 16px;
-  margin: 0;
-  padding: 10px 0px 0px 30px;
+.filters .locations {
+    border-right: 1px solid #ddd;
 }
 
 .popover {
-  background: #FAFAFA;
-  border: 1px solid #DDDDDD;
-  border-radius: 4px;
-  display: none;
-  position: absolute;
-  padding: 0;
-  margin: 0;
-  width: 100%;
+    display         : none;
+    background-color: #FAFAFA;
+    border          : #DDDDDD solid 1px;
+    border-radius   : 4px;
+    position        : relative;
+    width           : 100%;
+    margin-top      : 1.32em;
+    margin-left     : -3em;
+    padding-right   : 0.5em;
+
 }
 
-.filters .locations:hover .popover,
-.filters .amenities:hover .popover {
-  display: block;
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
 }
 
 .filters ul {
-  list-style: none;
-  margin: 0;
+    list-style: none;
 }
 
-.popover li {
-  margin: 12px;
+.amenities .popover li:first-child {
+    margin-top: 2em;
+}
+
+.popover>li,
+.popover>li>ul>li {
+    padding-bottom: 0.5em;
+}
+
+.popover {
+    padding-bottom: 3em;
+}
+
+.locations>ul h2 {
+    margin-left: -0.6em;
+    font-size  : 16px;
+}
+
+.locations>ul>li:first-of-type {
+    padding-top: 0.7em;
+}
+
+.locations>ul>li>ul>li:first-child {
+    margin-top: -0.3em;
+}
+
+
+.locations>ul>li>ul>li {
+    margin-left: -2.2em;
+    font-size  : 14px;
+}
+
+.amenities>ul {
+    padding-bottom: 1.8em;
+}
+
+.amenities .popover>li {
+    padding-left: 2.8em;
 }
 
